# LISPCompiler

./: CMakeLists.txt  README.md  a.out  build.sh  languagedoc.md  lexer.md  lib1.lisp  lib2.lisp  main  out  out.asm  out.txt  program  run.sh  stdio.lisp  stdlib.asm  stdlib.lisp  test.lisp  testout.asm
6502ASM/: test.asm
6502ASM/include/: instructions.hpp
6502ASM/src/: instructions.cpp
6502CPU/doc/: doc.md
6502CPU/include/: ALU.hpp  BusInterface.hpp  CPU.hpp  InstructionDecoder.hpp  InterruptHandler.hpp  Machine.hpp  Memory.hpp  RegUnit.hpp  TimingUnit.hpp
6502CPU/src/: ALU.cpp  BusInterface.cpp  CPU.cpp  InstructionDecoder.cpp  InterruptHandler.cpp  Machine.cpp  Memory.cpp  RegUnit.cpp  TimingUnit.cpp
8086EMU/: testfile.cpp
CircleCircle/include/: Circle.hpp  vmath.hpp
FactoryGame/: CMakeLists.txt  Entity.hpp  Game.hpp  Item.hpp  Machine.cpp  Machine.hpp  Resource.hpp  Tile.cpp  Tile.hpp  Vec.hpp  World.cpp  World.hpp  idea.md  main.cpp
LISP/V1.0/: CMakeLists.txt  idea.md
LISPCompiler/: CMakeLists.txt  a.out
LISPCompiler Kopie/include/: tokenizer.hpp
LISPCompiler Kopie/src/: main.cpp
LISPCompiler/doc/: asm.md  lexer.md  parser.md  preproc.md
LISPCompiler/include/: asmgen.hpp  codegen.hpp  parser.hpp
LISPCompiler/src/: asmgen.cpp  codegen.cpp  main.cpp  preproc.cpp  tokenizer.cpp
LISPCompilerTMP/: README.md
LISPCompilerTMP/include/: parser.hpp  tokenizer.hpp
LISPCompilerTMP/src/: parser.cpp
MAL/: CMakeLists.txt  core.cpp  main.cpp  printer.cpp  reader.cpp  types.cpp
MakeALisp/: Makefile  main  main.cpp  reader.hpp
N_Body/include/: Matrix.hpp
PLDev/FLEX/: README.md  lex.yy.c  lexer.l
PhysicsEngine/V1.0/: Makefile  idea.md  test  test.cpp
PhysicsEngine/V2.0/: Makefile  collisions.cpp  test  test.cpp
PhysicsEngine/V3.0/: CMakeLists.txt
PhysicsEngine/V3.0/include/: testclass.hpp
PhysicsEngine/V3.0/src/: main.cpp
Uni/VL1/: main  main.c
Uni/VL3/: main.c
VM/: CPU.cpp  CPU.hpp  Decoder.hpp  ISA.txt  Memory.cpp  Memory.hpp
VMath/include/: syntax.hpp  vmath.hpp
VMath/src/: main.cpp
doc/: asm.md  codegen.md  preproc.md
include/: asmgen.hpp  codegen.hpp  ir_codegen.hpp  parser.hpp  preproc.hpp  tokenizer.hpp
src/: asmgen.cpp  codegen.cpp  ir_codegen.cpp  main.cpp  preproc.cpp  tokenizer.cpp
(+21 files in other folders)
